--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --modal-btn-color-portfolio: #f5f4fa;
   --section-background-color: #e5e5e5;
   --section-background-dark-color: #f5f4fa;
+  --icon-color: #afb1b8;
 }
 body {
   font-family: var(--primary-font);
@@ -48,7 +49,7 @@ button {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
- }
+}
 .section-title {
   font-weight: 700;
   font-size: 36px;
@@ -63,7 +64,7 @@ button {
 
 .page-header {
   color: var(--primary-text-color-theme-dark);
-    border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 .page-header-container {
   display: flex;
@@ -101,10 +102,15 @@ button {
   color: var(--primary-text-color-theme-light);
   padding: 32px 0;
   display: block;
-  }
+}
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
+}
+.header-contact-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .contact-mail {
   font-weight: 500;
@@ -112,10 +118,17 @@ button {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color-theme-light);
-  margin-left: auto;
   margin-right: 50px;
   padding: 32px 0;
-  display: block;
+  display: flex;
+  justify-content: center;
+}
+.mail-icon,
+.phone-icon {
+  align-self: center;
+  fill: currentColor;
+  margin-right: 10px;
+  order: -1;
 }
 .contact-phone-number {
   font-weight: 500;
@@ -124,7 +137,8 @@ button {
   letter-spacing: 0.02em;
   color: var(--secondary-text-color-theme-light);
   padding: 32px 0;
-  display: block;
+  display: flex;
+  justify-content: center;
 }
 .contact-phone-number:hover,
 .contact-phone-number:focus {
@@ -140,7 +154,12 @@ button {
 /*===============/HEADER==============*/
 /*===============HERO==============*/
 .page-hero {
-  background-color: #2f303a;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero/bg.jpg");
+  background-color: #c4c4c4;
   max-width: 1600px;
   margin: 0 auto;
   padding: 200px 0;
@@ -213,15 +232,30 @@ button {
 /*===============ADVANTAGES==============*/
 .advantages-section {
   padding-bottom: 0;
- }
+}
 .page-advantages-container {
- 
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 .advantages-card {
   flex-basis: calc((100% - 90px) / 4);
+  display: flex;
+  flex-direction: column;
+}
+.advantages-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  border-radius: 4px;
+  background-color: var(--section-background-dark-color);
+  margin-bottom: 30px;
+}
+.advantages-list-icon {
+  justify-content: center;
+  align-items: center;
 }
 .visually-hidden {
   position: absolute;
@@ -286,7 +320,7 @@ button {
   letter-spacing: 0.03em;
   color: var(--secondary-text-color-theme-light);
   margin-top: 10px;
-  margin-bottom: 0;
+  margin-bottom: 16px;
 }
 .employees-card {
   flex-basis: calc((100% - 90px) / 4);
@@ -298,12 +332,78 @@ button {
 .employees-card-content-wrapper {
   padding: 30px;
 }
+.employees-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.employees-social-link {
+  background-color: var(--primary-text-color-theme-dark);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.employees-social-link:hover,
+.employees-social-link:focus {
+  background-color: var(--accent-color);
+}
+.employees-social-link:hover .employees-social-icon,
+.employees-social-link:focus .employees-social-icon {
+  fill: var(--primary-text-color-theme-dark);
+}
+.employees-social-icon {
+  fill: var(--icon-color);
+}
 /*===============/EMPLOYEES==============*/
+/*==================CLIENTS==================*/
+/* .page-clients {
+} */
+.list-clients {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.image-client {
+  flex-basis: calc((100% - 150px) / 6);
+}
+.clients-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
+  color: var(--icon-color);
+}
+.clients-list-link:hover,
+.clients-list-link:focus {
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+  border-color: var(--accent-color);
+}
+.client-icon {
+  fill: currentColor;
+}
+/*=================/CLIENTS==================*/
+
 /*===============FOOTER==============*/
 .background-footer {
   background: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+  /* display: flex;
+  align-items: center; */
+}
+.footer-wrap {
+  display: flex;
+  align-items: baseline;
+}
+.address-footer-wrap {
+  margin-right: 70px;
 }
 .logo-footer {
   display: block;
@@ -333,6 +433,41 @@ address {
   display: block;
   margin-bottom: 9px;
 }
+.join {
+  margin-bottom: 20px;
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-text-color-theme-dark);
+}
+.join-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.social-link-footer {
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-link-footer:hover,
+.social-link-footer:focus {
+  background-color: var(--accent-color);
+}
+.social-link-footer:hover .social-icon-footer,
+.social-link-footer:focus .social-icon-footer {
+  fill: var(--primary-text-color-theme-dark);
+}
+.social-icon-footer {
+  fill: var(--primary-text-color-theme-dark);
+}
 /*===============/FOOTER==============*/
 /*==================PROJECTS==================*/
 .img-project {
@@ -341,15 +476,15 @@ address {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-text-color-theme-light);
-  }
+}
 .description-project {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color-theme-light);
-   margin-top: 4px;
- }
+  margin-top: 4px;
+}
 .page-button-container {
   display: flex;
   flex-wrap: wrap;
@@ -370,10 +505,17 @@ address {
   display: flex;
   align-items: center;
   gap: 30px;
- }
+}
 .project-card-content-wrapper {
-   padding: 20px 24px;
+  padding: 20px 24px;
   border: 1px solid #eeeeee;
   background: #ffffff;
+}
+.menu-projects-description {
+  display: block;
+  text-decoration: none;
+}
+.menu-projects-hover:hover {
+  box-shadow: 0px 4px 4px 0px #00000040;
 }
 /*=================/PROJECTS==================*/
